RMX2020: Migrate "rounded_corner_content_padding"
With my previous CL [1], we can override

   rounded_corner_content_padding

at the Framework resource layer rather than the SysUI resource layer.

No matter whether

  persist.sys.ime.can_render_gestural_nav_buttons

is enabled or not, there should be no observable behavior change in
this CL.

 [1]: I0c3717c0bdfc928167c6eba06247b37caabf33b9
      24d6b891f572f7be419d3acc9793ca68d062cf35

Bug: 215554582
Test: Manually verified as follows.
  1. Build aosp_coral-userdebug and flash it
  2. adb shell cmd overlay lookup android \
       android:dimen/rounded_corner_content_padding
     -> 70.0px
  3. adb shell cmd overlay lookup com.android.systemui \
       com.android.systemui:dimen/rounded_corner_content_padding
     -> 70.0px
Change-Id: I391a504482f25c17f9b67f7eb8f56f362da71ae0

--- a/rro_overlays/FrameworksResOverlayRMX2020/res/values/dimens.xml
+++ b/rro_overlays/FrameworksResOverlayRMX2020/res/values/dimens.xml
@@ -35,4 +35,7 @@
         orientation. If zero, the value of rounded_corner_radius is used. -->
     <dimen name="rounded_corner_radius_bottom">58.0px</dimen>
 
+    <!-- Adjust the icon padding in status bar for rounded corners --> 
+    <dimen name="rounded_corner_content_padding">14.0dip</dimen>
+
 </resources>
