RMX2020: overlay: Offload WM shell to another thread
Android 12 added this config to offload some window management to a
dedicated thread. Enable it to improve performance when the main System
UI thread is busy.

Change-Id: I9eef4cdbc26d0880f3a9aaf875d5e36ebd693238

--- a/rro_overlays/FrameworksResOverlayRMX2020/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayRMX2020/res/values/config.xml
@@ -590,4 +590,7 @@
          meanings. -->
     <integer name="config_defaultRingVibrationIntensity">3</integer>
 
+    <!-- Determines whether the shell features all run on another thread. -->
+    <bool name="config_enableShellMainThread">true</bool>
+
 </resources>
